# sort_files

./: .gitignore  LICENSE  README.md  main.py  my_logger.py  normalize.py  pyproject.toml  requirements.txt  setup.py
clean_folder/: __init__.py  clean.py
